# swift_cpp_interop_cmake

./: CMakeLists.txt
cmake/modules/: AddSwift.cmake
src/: CMakeLists.txt  main.cpp
src src/: CMakeLists.txt  func.swift  main.cpp
